charts/clabernetes/tests/customized_values/test-fixtures/golden/deployment.yaml
---
# Source: clabernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clabernetes-manager
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-manager"
    c9s.run/app: clabernetes
    c9s.run/name: "clabernetes-manager"
    c9s.run/component: manager
spec:
  selector:
    matchLabels:
      c9s.run/app: clabernetes
      release: release-name
      c9s.run/component: manager
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: "clabernetes-0.0.0"
        release: release-name
        heritage: Helm
        revision: "1"
        app.kubernetes.io/name: "clabernetes-manager"
        c9s.run/app: clabernetes
        c9s.run/name: "clabernetes-manager"
        c9s.run/component: manager
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    c9s.run/app: clabernetes
                    c9s.run/name: "clabernetes-manager"
                    c9s.run/component: manager
                topologyKey: kubernetes.io/hostname
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    c9s.run/app: clabernetes
                    c9s.run/name: "clabernetes-manager"
                    c9s.run/component: manager
                topologyKey: topology.kubernetes.io/zone
      terminationGracePeriodSeconds: 10
      serviceAccountName: "clabernetes-service-account"
      initContainers:
        - name: init
          image: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
          imagePullPolicy: IfNotPresent
          command: ["/clabernetes/manager", "run", "--initializer"]
          env:
            - name: APP_NAME
              value: clabernetes
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CLIENT_OPERATION_TIMEOUT_MULTIPLIER
              value: "1"
            - name: MANAGER_LOGGER_LEVEL
              value: info
            - name: CONTROLLER_LOGGER_LEVEL
              value: info
            - name: NODE_RUNTIME_IMAGE
              value: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
            - name: PLANNER_POOL_ENABLED
              value: "true"
            - name: C9S_DIAGNOSTICS
              value: "false"
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              cpu: 100m
              memory: 256Mi
      containers:
        - name: manager
          image: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
          imagePullPolicy: IfNotPresent
          command: ["/clabernetes/manager", "run"]
          env:
            - name: APP_NAME
              value: clabernetes
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CLIENT_OPERATION_TIMEOUT_MULTIPLIER
              value: "1"
            - name: MANAGER_LOGGER_LEVEL
              value: info
            - name: CONTROLLER_LOGGER_LEVEL
              value: info
            - name: NODE_RUNTIME_IMAGE
              value: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
            - name: PLANNER_POOL_ENABLED
              value: "true"
            - name: C9S_DIAGNOSTICS
              value: "false"
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
          - name: http
            containerPort: 10443
          livenessProbe:
            httpGet:
              path: /alive
              port: 10443
              scheme: HTTP
            successThreshold: 1
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /alive
              port: 10443
              scheme: HTTP
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
      tolerations:
        - effect: PreferNoSchedule
          key: test_toleration
          operator: Equal
          value: "true"
        - effect: PreferNoSchedule
          key: test_toleration_manager_only
          operator: Equal
          value: "true"
