charts/clabernetes/tests/customized_values/test-fixtures/golden/host-endpoint-daemonset.yaml
---
# Source: clabernetes/templates/host-endpoint-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: "clabernetes-host-endpoint"
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-host-endpoint"
    c9s.run/app: clabernetes
    c9s.run/name: "clabernetes-host-endpoint"
    c9s.run/component: host-endpoint
spec:
  selector:
    matchLabels:
      c9s.run/app: clabernetes
      release: release-name
      c9s.run/component: host-endpoint
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: "clabernetes-0.0.0"
        release: release-name
        heritage: Helm
        revision: "1"
        app.kubernetes.io/name: "clabernetes-host-endpoint"
        c9s.run/app: clabernetes
        c9s.run/name: "clabernetes-host-endpoint"
        c9s.run/component: host-endpoint
    spec:
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: "clabernetes-host-endpoint"
      terminationGracePeriodSeconds: 10
      tolerations:
        - operator: Exists
      containers:
        - name: host-endpoint
          image: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
          imagePullPolicy: IfNotPresent
          command:
            - /clabernetes/manager
            - device-runtime
            - host-endpoint-daemon
          args:
            - --nodeName=$(C9S_WORKER_NODE_NAME)
            - --nodeAddress=$(C9S_WORKER_NODE_ADDRESS)
            - --socket=/var/run/clabernetes/host-endpoint/daemon.sock
          env:
            - name: C9S_WORKER_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: C9S_WORKER_NODE_ADDRESS
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            runAsUser: 0
          volumeMounts:
            - name: host-endpoint-socket
              mountPath: /var/run/clabernetes/host-endpoint
      volumes:
        - name: host-endpoint-socket
          hostPath:
            path: /var/run/clabernetes/host-endpoint
            type: DirectoryOrCreate
