charts/clabernetes/tests/customized_values/test-fixtures/golden/ingress.yaml
---
# Source: clabernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clabernetes-ui
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-ui"
    clabernetes/app: clabernetes
    clabernetes/name: "clabernetes-ui"
    clabernetes/component: ui
spec:
  ingressClassName: nginx
  rules:
    - host: ui.clabernetes.containerlab.dev
      http:
        paths:
          - backend:
              service:
                name: clabernetes-ui
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
